# testpulse-proto

./: .gitignore  README.md  pyproject.toml  radius.yaml  requirements.txt
bundles/eap_tls_suite_20260318/: _redaction_summary.json
docs/: HOW_TO_GUIDE.md  TestPulse_Dashboard_Screenshot_Agent.md  TestPulse_Dual_Surface_Architecture.docx  TestPulse_Dual_Surface_Architecture.md  TestPulse_Dual_Surface_Architecture_for_IDE_MCP_ReactFlow.docx  TestPulse_Dual_Surface_Architecture_for_IDE_MCP_ReactFlow.md  TestPulse_MCP_Agent_Mockup.md  TestPulse_Next_Build_Plan.docx  TestPulse_Next_Build_Plan.md  TestPulse_Phase1_to_MCP.md  TestPulse_TCPreplay_Tool.md  TestPulse_TestCase_Mapping.md  TestPulse_Testing_Procedures.md  copilot_playbook.md
scripts/: collect_endpoint_artifacts.ps1  generate_bundle_dashboards.py  readme_to_pdf.py
testpulse/: models.py
testpulse/api/: __init__.py  app.py
testpulse/collect/: __init__.py  appliance_collector.py  endpoint_collector.py  ntp_sync.py  pcap_collector.py  tunnel_manager.py
testpulse/core/: __init__.py  bundle.py  correlate.py  evaluate.py
testpulse/diagnostics/: __init__.py  common.py  dhcp_health.py  directory_health.py  dns_health.py  health.py  nas_health.py  ntp_health.py  (+3 more)
tests/: test_bundle_and_diagnostics.py  test_bundle_policy_findings.py  test_compare_and_stream.py  test_component_evaluators.py  test_component_health.py  test_evaluate.py  test_next_build_contracts.py  test_next_features.py  test_prognostics.py  test_radiusd_parser_metadata.py  test_run_diagnostics_materialize_logs.py  test_services_and_api.py
web/: README.md  index.html  package-lock.json  package.json
(+103 files in other folders)
